--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <p>
       Here are some songs I like, I hope you'll like them too!
     </p>
-    <iframe src="https://www.youtube.com/embed/videoseries?list=LLnXJ-rSkiJKxLSCrdON3QDQ" 
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLsQv9xI4N5hfQJaPJcTgyv1kTWcDFjY7V" 
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
     <br/>
     <br/>
@@ -181,6 +181,7 @@
       scan my code
     </h1>
     <br/>
+    <img src="https://qr.kaywa.com/?l=1&s=4&d=https%3A%2F%2Fkaywa.me%2F6CGdI" alt="QRCode"/>
     <br/>
     <br/>
     </section>
