--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </Li>
         <br/>
         <li id="QA_text">
-          <b>Example of a use-case: searching for a recipe of a honey cacke!</b>
+          <b>Example of a use-case: searching for a recipe of a honey cake!</b>
           <ul>
             <li>
                 <u>Web1</u> - I will find different pages of recipes, some of them will be old and not that modern. If I'd like to chose differnt options like gluten
