--- a/index.html
+++ b/index.html
@@ -166,9 +166,11 @@
     <h1>
       give me a like
     </h1>
-    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fyafitzohar.github.io%2FAss1%2F&width=74&layout=button_count&action=like&size=large&show_faces=true&share=false&height=21&appId" 
-    width="100" height="40" style="border:none;overflow:hidden" scrolling="no" frameborder="0" 
-    allowTransparency="true" allow="encrypted-media"></iframe>
+    <p>
+      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fyafitzohar.github.io%2FAss1%2F&width=74&layout=button_count&action=like&size=large&show_faces=true&share=false&height=21&appId" 
+      width="100" height="40" style="border:none;overflow:hidden" scrolling="no" frameborder="0" 
+      allowTransparency="true" allow="encrypted-media"></iframe>
+    </p>
     <br/>
     </section>
 
@@ -179,7 +181,9 @@
       scan my code
     </h1>
     <br/>
-    <img src="https://qr.kaywa.com/?l=1&s=4&d=https%3A%2F%2Fkaywa.me%2F6CGdI" alt="QRCode"/>
+    <p>
+      <img src="https://qr.kaywa.com/?l=1&s=4&d=https%3A%2F%2Fkaywa.me%2F6CGdI" alt="QRCode"/>
+    </p>
     <br/>
     <br/>
     </section>
@@ -248,7 +252,11 @@
     <h1>
       contact me
     </h1>
-    <br/>
+    <p>
+      <a href= "mailto:yafitzo@post.bgu.ac.il">
+        Press here to send me an e-mail!
+      </a>
+    </p>
     <br/>
     <br/>
     </section>
