--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@
       give me a like
     </h1>
     <p>
-      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fyafitzohar.github.io%2FAss1%2F&width=74&layout=button_count&action=like&size=large&show_faces=true&share=false&height=21&appId" 
-      width="100" height="40" style="border:none;overflow:hidden" scrolling="no" frameborder="0" 
-      allowTransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fyafitzohar.github.io%2FAss1%2F&width=133&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId" width="133" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     </p>
     <br/>
     </section>
