--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
           <b>List 3 differences between web1, web2 and web3:</b>
           <ol type="1">
             <li>
-                <u>Static Vs Dynamic</u> - Web1 allows only static pages. It means we as consumers of the page can't enter any new data or information to the page.
-                For example, we can't add our phone number to make contact or any other personal detail. On the other hand, at web2 and web3 the web pages is way
-                more dynamic. We can enter new data that can help us achieve more goals, contribute information of their own in existing sites and share 
+                <u>Static Vs Dynamic</u> - Web1 allows only static pages. It means that we as consumers of the page can't enter any new data or information to the page.
+                For example, we can't add our phone number to make contact, or any other personal detail. On the other hand, at web2 and web3 the web pages is way
+                more dynamic. We can enter new data that can help us achieve more goals, contribute information of our own in existing sites and share 
                 information with new pepole like in social networking sites (facebook and twitter for example).
             </li>
             <li>
-              <u>Personal & information pages Vs service pages</u> - Because of the properties above, The use of the pages in web1 differ frome the use of pages
+              <u>Personal & information pages Vs service pages</u> - Because of the properties above, the use and purpose of the pages in web1 differ frome the use and purpose of pages
                   in web2 and web3. While the pages in web 1 are more personal and informative pages, where people can mostly read informafion from,
                   pages in web2 and web3 can provide variety of services to the consumers like Virtual campuses and online courses, online governmental services,
                   simple electronic health services and much more services. 
